--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -1,7 +1,28 @@
+<h1>Add New Book</h1>
+
+<div>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+</div>
+
 <div>
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit">
     </form>
+</div>
+<div>
+    <p>To select several authors, press Ctrl when clicking on each author's name.</p>
+    <br>
+    <p>Author not available from the list?</p>
+    <p>Add the author <a href="{% url 'add-author' %}">here</a></p>
 </div>
