--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
         <ul>
             
             {% for book in books %}
-            <li>{{ book.get_authors }} - {{ book.title }}</li>
+            <li>{{ book.get_authors }} - {{ book.title }} - <a href="{% url 'add-collection' %}">Add to My Collection</a></li>
             {% endfor %}
             
         </ul>
