--- a/templates/add_author.html
+++ b/templates/add_author.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% block title %}Add Author{% endblock %}
+
+{% block content %}
+<br>
 <h1>Add New Author</h1>
 
 <div>
@@ -7,3 +12,5 @@
         <input type="submit" value="Submit">
     </form>
 </div>
+{% endblock content %}
+
