--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% block title %}Add Book{% endblock %}
+
+{% block content %}
+<br>
 <h1>Add New Book</h1>
 
 <div>
@@ -26,3 +31,4 @@
     <p>Author not available from the list?</p>
     <p>Add the author <a href="{% url 'add-author' %}">here</a></p>
 </div>
+{% endblock content %}
