--- a/templates/add_collection.html
+++ b/templates/add_collection.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+{% block title %}Add to Collection{% endblock %}
+
+{% block content %}
+<br>
 <h1>Add Book from Library to Your Collection</h1>
 
 <div>
@@ -24,3 +29,4 @@
         <input type="submit" value="Submit">
     </form>
 </div>
+{% endblock content %}
