--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
-</head>
-<body>
-    <h1>Search Results</h1>
+{% extends "base.html" %}
+{% block title %}Search Results{% endblock %}
+
+{% block content %}
+<br>
+<h1>Here is what we found...</h1>
 
     {% if book_searched %}
         <h3>You searched for "{{ book_searched }}"</h3>
@@ -25,5 +21,5 @@
     {% else %}
         <h3>Seems like you forgot to search :)</h3>
     {% endif %}
-</body>
-</html>
+{% endblock content %}
+    
