--- a/templates/nav.html
+++ b/templates/nav.html
@@ -18,7 +18,7 @@
                 <a class="nav-link text-white" aria-current="page" href="{% url 'login' %}">Log In</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="#">Sign Up</a>
+                <a class="nav-link text-white" aria-current="page" href="{% url 'signup' %}">Sign Up</a>
             </li>
             {% endif %}
           <li class="nav-item">
