--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link text-white" aria-current="page" href="#">My Collection</a>
+                <a class="nav-link text-white" aria-current="page" href="{% url 'user-collection' %}">My Collection</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" aria-current="page" href="{% url 'logout' %}">Log Out</a>
