Added link to signup on login page

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,5 +9,7 @@
   {{ form.as_p }}
   <button type="submit">Log In</button>
 </form>
+<br>
+<p>No account yet? Please sign up <a href="{% url 'signup' %}">here</a></p>
 {% endblock content %}
 
