--- a/templates/book.html
+++ b/templates/book.html
@@ -6,7 +6,7 @@
 <h1>{{book.title}}</h1>
 <ul>
 {% for note in notes %}
-    <li>{{ note.added|date}} <br><a href="{% url 'note' note.id %}">{{ note.heading }}</a> - {{ note.text }} </li>
+    <li>{{ note.added|date}} <br><a href="{% url 'note' note.id %}">{{ note.heading }}</a> - {{ note.text }} | <a href="{% url 'note_edit' note.user.username note.id %}">Edit</a></li>
 {% empty %}
     <li>No notes yet. You can add one <a href="{% url 'add-note' %}">here</a></li>
 {% endfor %}
