--- a/templates/book.html
+++ b/templates/book.html
@@ -4,9 +4,22 @@
 {% block content %}
 <br>
 <h1>{{book.title}}</h1>
+<div>
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+</div>
+<br>
 <ul>
 {% for note in notes %}
-    <li>{{ note.added|date}} <br><a href="{% url 'note' note.id %}">{{ note.heading }}</a> - {{ note.text }} | <a href="{% url 'note_edit' note.user.username note.id %}">Edit</a></li>
+    <li>{{ note.added|date}} <br><a href="{% url 'note' note.id %}">{{ note.heading }}</a> - {{ note.text }} | <a href="{% url 'note_edit' note.user.username note.id %}">Edit</a> | <a href="{% url 'note_delete' note.id %}">Delete</a></li>
 {% empty %}
     <li>No notes yet. You can add one <a href="{% url 'add-note' %}">here</a></li>
 {% endfor %}
