--- a/templates/search_books.html
+++ b/templates/search_books.html
@@ -3,10 +3,11 @@
 
 {% block content %}
 <br>
-<h1>Here is what we found...</h1>
-
+<h1 class="text-success">Here is what we found...</h1>
+<br>
     {% if book_searched %}
-        <h3>You searched for "{{ book_searched }}"</h3>
+        <h4>You searched for "{{ book_searched }}"</h4>
+        <br>
         {% if result %}
         <ul>
             {% for book in result %}
@@ -16,7 +17,9 @@
         <p>Not the book you were looking for? You can add a new book to the library <a href="{% url 'add-book' %}">here</a></p>
         {% else %}
             <p>Your search did not return any results.</p>
-            <p>You can add the book to the library <a href="{% url 'add-book' %}">here</a></p>
+            
+            <p>If you could not find an author, then you may want to add the author <a href="{% url 'add-author' %}">here</a></p>
+            <p>Searched book not listed among the author's books? Add it <a href="{% url 'add-book' %}">here</a></p>
         {% endif %}
     {% else %}
         <h3>Seems like you forgot to search :)</h3>
