--- a/templates/add_collection.html
+++ b/templates/add_collection.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <br>
-<h1>Add Book from Library to Your Collection</h1>
-
+<h1 class="text-success">Add Book from Library to Your Collection</h1>
+<br>
 <div>
     {% if messages %}
     <ul class="messages">
@@ -22,11 +22,11 @@
     <p>Select a book from the list below to add it to your collection.</p>
     
 </div>
-<div>
+<div class="col-md-3">
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Submit">
+        <button type="submit" class="btn btn-success">Add Book</button>
     </form>
 </div>
 {% endblock content %}
