--- a/templates/collection.html
+++ b/templates/collection.html
@@ -3,14 +3,14 @@
 
 {% block content %}
 <br>
-<h1>{{ user.username}}'s collection</h1>
-
-<div>
+<h1 class="text-success">{{ user.username}}'s collection</h1>
+<br>
+<div class="card">
     {% if result %}
-    <ul>
+    <ul class="list-group list-group-flush">
         {% for book in result %}
         {% for key, value in book.items %}
-            <li>{{ value }} - <a href="{% url 'book' key %}">Notes</a></li>
+            <li class="list-group-item">{{ value }} - <a href="{% url 'book' key %}">Notes</a></li>
         {% endfor %}
     {% endfor %}
     </ul>
