Styled forms author, book, note, login, signup

--- a/templates/add_author.html
+++ b/templates/add_author.html
@@ -3,14 +3,19 @@
 
 {% block content %}
 <br>
-<h1>Add New Author</h1>
+<h1 class="text-success">Add New Author</h1>
 
-<div>
-    <form action="" method="post">
+<!-- <div class="col-md-3>" -->
+    <form class="row g-3" action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
+        <div class="col-md-3">
+            {{ form.as_p }}
+        </div>
+        
+        <div class="col-12">
+            <button type="submit" class="btn btn-success">Add Author</button>
+        </div>
     </form>
-</div>
+<!-- </div> -->
 {% endblock content %}
 
