--- a/templates/add_note.html
+++ b/templates/add_note.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <br>
-<h1>Add New Note</h1>
+<h1 class="text-success">Add New Note</h1>
 
 <div>
     {% if messages %}
@@ -19,10 +19,13 @@
 </div>
 
 <div>
-    <form action="" method="post">
+    <form class="row g-3" action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit">
+        <div class="col-md-3">{{ form.as_p }}</div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-success">Add Note</button>
+        </div>
+        
     </form>
 </div>
 {% endblock %}
