--- a/templates/add_collection.html
+++ b/templates/add_collection.html
@@ -22,11 +22,15 @@
     <p>Select a book from the list below to add it to your collection.</p>
     
 </div>
-<div class="col-md-3">
-    <form action="" method="post">
+
+    <form class="row g-3" action="" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Add Book</button>
+        <div class="col-md-3">
+            {{ form.as_p }}
+        </div>
+        <div class="col-12">
+            <button type="submit" class="btn btn-success">Add Book</button>
+        </div>
     </form>
-</div>
+
 {% endblock content %}
