--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,10 +3,15 @@
 
 {% block content %}
 <br>
-<h2>Sign Up</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Sign Up</button>
-</form>
+<h2 class="text-success">Sign Up</h2>
+<div class="shadow w-50 p-4 mb-5 bg-body rounded">
+  <form method="post">
+    {% csrf_token %}
+    <div >{{ form.as_p }}</div>
+    <div >
+      <button type="submit" class="btn btn-success">Sign Up</button>
+  </div>
+  </form>
+</div>
+
 {% endblock content %}
