Styled html, messages, removed repetitions

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,14 +10,14 @@
 <body class="d-flex flex-column min-vh-100">
     
     {% include 'nav.html' %}
+    <br>
+    {% include 'messages.html' %}
     
     <div class="container-fluid">
         
-        <!-- <div> -->
             {% block content %}
 
             {% endblock content %}
-        <!-- </div> -->
 
     </div>
     
