--- a/templates/add_note.html
+++ b/templates/add_note.html
@@ -6,24 +6,11 @@
 <h1 class="text-success">Add New Note</h1>
 
 <div>
-    {% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-            {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-            {{ message }}
-        </li>
-        {% endfor %}
-    </ul>
-    {% endif %}
-</div>
-
-<div>
     <form class="row g-3" action="" method="post">
         {% csrf_token %}
         <div class="col-md-3">{{ form.as_p }}</div>
         <div class="col-12">
-            <button type="submit" class="btn btn-success">Add Note</button>
+            <button type="submit" class="btn btn-success">Submit</button>
         </div>
         
     </form>
